<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AgendarCita.Agendar_Citas">

     <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">
      <!--Hace llamado a los identificadores-->

         <TextView
             android:id="@+id/uid_usuario"
             android:text="@string/uid_usuario"
             android:visibility="gone"
             android:textColor="#fff"
             android:textSize="15sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
      <!--LLamar al correo_usuario-->
        <TextView
           android:id="@+id/Correo_usuario"
           android:hint="@string/Correo_usuario"
           android:textSize="18sp"
           android:visibility="gone"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"/>

         <!--Icono y textview-->

         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">

             <!--ICONO-->

             <androidx.constraintlayout.utils.widget.ImageFilterView
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:src="@drawable/fecha_hora_registro_foreground"/>
             
             <TextView
                 android:text="@string/Fecha_hora_actual_TXT"
                 android:textSize="20sp"
                 android:layout_marginStart="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>


         </androidx.appcompat.widget.LinearLayoutCompat>


       <!--LLamar a fecha_hora_actual del dispositivo-->
        <TextView
           android:id="@+id/Fecha_hora_actual"
           android:hint="@string/Fecha_hora_actual"
           android:textSize="18sp"
            android:gravity="center"
             android:textStyle="bold"
            android:layout_marginTop="5dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"/>

    <!--Última visita-->
       <EditText
           android:id="@+id/Ultima_Visita"
           android:hint="@string/Ultima_Visita"
           android:textSize="25sp"
           android:layout_marginTop="10dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"/>

       <!--Motivo de consulta-->
       <EditText
           android:id="@+id/Motivo"
           android:hint="@string/Motivo"
           android:textSize="25sp"
           android:layout_marginTop="10dp"
           android:minHeight="150dp"
           android:gravity="start"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"/>

        <!--Cómo se enteró-->
         <EditText
           android:id="@+id/Como_Se_Entero"
           android:hint="@string/Como_Se_Entero"
           android:textSize="25sp"
           android:layout_marginTop="10dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"/>


     <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

<!--Botón para abrir calendario-->

         <Button
        android:id="@+id/Btn_Calendario"
        android:text="@string/Btn_Calendario"
        app:icon="@drawable/icono_calendario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

         <TextView
             android:id="@+id/Fecha"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
             android:hint="@string/Fecha"
             android:textSize="20sp" />

         <!--Visualizar La Fecha-->

     </androidx.appcompat.widget.LinearLayoutCompat>

        <!--Estado de la nota-->
     <TextView
        android:id="@+id/Estado"
        android:text="@string/Estado"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


     </androidx.appcompat.widget.LinearLayoutCompat>
    

</ScrollView>