<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActualizarCita.Actualizar_Cita">




    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">
        <!--ID DE LA cita-->
        <TextView
            android:id="@+id/Id_cita_A"
            android:hint="@string/Id_cita_A"
            android:textSize="18sp"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!--Hace llamado a los identificadores-->
        <!--LLamar al correo_usuario-->
        <TextView
            android:id="@+id/Correo_usuario_A"
            android:hint="@string/Correo_usuario_A"
            android:textSize="18sp"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/uid_usuario_A"
            android:text="@string/uid_usuario_A"
            android:visibility="gone"
            android:textColor="#fff"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!--Fecha de registro-->
        <TextView
            android:id="@+id/Fecha_registro_A"
            android:hint="@string/Fecha_registro_A"
            android:textSize="18sp"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


         <!--Estado de la cita-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

         <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/Tarea_Finalizada"  
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:visibility="gone"
            android:background="#30FF24" />

         <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/Tarea_No_Finalizada"  
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:visibility="gone"
            android:layout_marginStart="5dp"
            android:background="#E74C3C" />

          
        <TextView
            android:id="@+id/Estado_A"
            android:text="@string/Estado_A"
            android:textSize="20sp"
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>



        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--Última visita-->
        <EditText
            android:id="@+id/Ultima_Visita_A"
            android:hint="@string/Ultima_Visita_A"
            android:textSize="25sp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!--Motivo de consulta-->
        <EditText
            android:id="@+id/Motivo_A"
            android:hint="@string/Motivo_A"
            android:textSize="25sp"
            android:layout_marginTop="10dp"
            android:minHeight="150dp"
            android:gravity="start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!--Cómo se enteró-->
        <EditText
            android:id="@+id/Como_Se_Entero_A"
            android:hint="@string/Como_Se_Entero_A"
            android:textSize="25sp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <!--Botón para abrir calendario-->

            <Button
                android:id="@+id/Btn_Calendario_A"
                android:text="@string/Btn_Calendario_A"
                app:icon="@drawable/icono_calendario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/Fecha_A"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:hint="@string/Fecha"
                android:textSize="20sp" />

            <!--Visualizar La Fecha-->

        </androidx.appcompat.widget.LinearLayoutCompat>

      
    <androidx.appcompat.widget.LinearLayoutCompat
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:layout_marginTop="10dp" >

        <Spinner
           android:id="@+id/Spinner_estado"
           android:layout_width="wrap_content"
           android:layout_height="match_parent"/>


     <TextView
       android:id="@+id/Estado_nuevo"
       android:text="@string/Estado_nuevo"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"/>

    </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>


</ScrollView>