<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardUseCompatPadding="true"
    android:padding="0.2dp"
    app:cardCornerRadius="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">
        <!--ICONO-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:src="@drawable/cita"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="7dp">

                <TextView
                    android:id="@+id/Id_cita_Item"
                    android:text="@string/Id_cita_Item"
                    android:layout_width="match_parent"
                    android:visibility="gone"
                    android:layout_height="wrap_content">

                </TextView>
                <TextView
                    android:id="@+id/Correo_usuario_Item"
                    android:text="@string/Correo_usuario_Item"
                    android:layout_width="match_parent"
                    android:visibility="gone"
                    android:layout_height="wrap_content">

                </TextView>
                <TextView
                    android:id="@+id/Fecha_hora_registro_Item"
                    android:text="@string/Fecha_hora_registro_Item"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </TextView>
                <TextView
                    android:id="@+id/Ultima_Visita_Item"
                    android:text="@string/Ultima_Visita_Item"
                    android:layout_width="match_parent"
                    android:textSize="18sp"
                    android:layout_height="wrap_content">

                </TextView>
                <TextView
                    android:id="@+id/Motivo_Item"
                    android:text="@string/Motivo_Item"
                    android:layout_width="match_parent"
                    android:textSize="18sp"
                    android:layout_height="wrap_content">

                </TextView>
                <TextView
                    android:id="@+id/Como_Se_Entero_Item"
                    android:text="@string/Como_Se_Entero_Item"
                    android:layout_width="match_parent"
                    android:visibility="gone"
                    android:layout_height="wrap_content">

                </TextView>
                <TextView
                    android:id="@+id/Fecha_Item"
                    android:text="@string/Fecha_Item"
                    android:layout_width="match_parent"
                    android:textSize="18sp"
                    android:layout_height="wrap_content">

                </TextView>

                   <!--Estado de la cita-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

         <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/Tarea_Finalizada_Item"  
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_gravity="center"
            android:visibility="gone"
            android:background="#30FF24" />

         <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/Tarea_No_Finalizada_Item"  
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_gravity="center"
            android:visibility="gone"
            android:layout_marginStart="5dp"
            android:background="#E74C3C" />

          
         <TextView
             android:id="@+id/Estado_Item"
             android:text="@string/Estado_Item"
             android:textSize="20sp"
             android:layout_marginStart="15dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>



        </androidx.appcompat.widget.LinearLayoutCompat>
               


            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>





    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.cardview.widget.CardView>