<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="300dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_gravity="center">

    <TextView
        android:text="@string/ElijaOpcionTXT"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
<!--    <com.airbnb.lottie.LottieAnimationView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="100dp"-->
<!--        android:layout_gravity="center"-->
<!--        android:layout_marginTop="10dp"-->
<!--        app:lottie_imageAssetsFolder="assets"-->
<!--        app:lottie_fileName="diienteloco.json"-->
<!--        app:lottie_loop="true"-->
<!--        app:lottie_autoPlay="true"/>-->

    <Button
        android:id="@+id/CD_Eliminar"
        android:text="@string/CD_Eliminar"
        android:layout_marginTop="10dp"
        app:icon="@drawable/icono_eliminar_cd"
        android:layout_gravity="center"
        android:layout_width="180dp"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/CD_Actuallizar"
        android:text="@string/CD_Actuallizar"
        android:layout_marginTop="10dp"
        app:icon="@drawable/icono_actualizar_cd"
        android:layout_gravity="center"
        android:layout_width="180dp"
        android:layout_height="wrap_content"/>

    
    
</androidx.appcompat.widget.LinearLayoutCompat>